renderer-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renderer-engine-service
spec:
  # type: LoadBalancer
  # type: NodePort # Ingress
  type: NodePort
  ports:
    - port: 80 # External port
      targetPort: 8000 # Internal port
